Fixed the top menu being partially off-screen in the Facebook theme

--- a/styles/facebook/core/core.css
+++ b/styles/facebook/core/core.css
@@ -46,6 +46,7 @@
 	left:292px;
 	right:10px;
 /*	height:30px;*/
+	width:auto; /* overrides default */
 	text-align: right;
 
 	background-color:#627AAD;
